# Agentic-AI-and-Generative-AI-Practice

./: README.md
Agno_and_Phidata_Apps/: 1_Semantic_Classifier_and_Sports_Coach_Agents_Agno.py  2_Tech_Research_and_Data_Analysis_Agents_Phidata.py  agents.db  instructions.txt
Cerebras_Cartesia_LiveKit_Exa_DeepGram_Apps/: .env  Automated-User-Research-[Cerebras, LangGraph, LangSmith].ipynb  Build-Your-Own-Perplexity-[Exa, Cerebras].ipynb  Real-Time-Sales-Agent-[Livekit, Cartesia, Deepram, Cerebras].ipynb
CrewAI_Apps/: .env  1_Email_Agent_with_Tools.ipynb  2_Research_Agent_with_Tools.ipynb  3_Marketing_Agent_with_Config.py  4_Legalising_Agent_with_Config.py  instructions.txt  pyproject.toml  requirements.txt  restricted_func.py
CrewAI_Apps/config_legal_agents/: agents.yaml  tasks.yaml
CrewAI_Apps/config_market_agents/: tasks.yaml
CrewAI_Apps/resources/for_3/: SEO_optimized_blogs.json  content_calendar.md  marketing_strategy.md
CrewAI_Apps/resources/for_3/reels/: reels_scripts.md
CrewAI_Apps/resources/for_4/contracts/: nda_template.md
LangBase_Apps/: .env  agents.ts  create-memory.ts  create-pipe.ts  index.ts  instructions.txt  package-lock.json  package.json  upload-docs.ts
LangChain_LangGraph_LangSmith_Apps/: 10)_Building_Question_Answer_System_over_a_Graph_Database.ipynb  11)_Building_Restaurant_Name_Generator_with_Gemini.ipynb  2)_Semantic_Search_Engine.ipynb  7)_Retreival_Augmented_Generation_with_LangChain_through_LangChain_Docs.ipynb  8)_Retreival_Augmented_Generation_Summarizer_with _Stuff_and_MapReduce.ipynb  instructions.txt  requirements.txt
(+27 files in other folders)
