[project]
name = "crew-ai-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.177.0",
    "google-search-results>=2.4.2",
    "ipykernel>=6.30.1",
    "notebook>=7.4.5",
    "serpapi>=0.1.5",
    "tavily-python>=0.7.11",
]
